--- a/wp-content/themes/marchebe/templates/category/show.html.twig
+++ b/wp-content/themes/marchebe/templates/category/show.html.twig
@@ -67,6 +67,7 @@
                 </div>
             </div>
             {% include '@AcMarche/category/_menu.html.twig' %}
+            {% include '@AcMarche/category/_description.html.twig' %}
             {% include '@AcMarche/category/_posts.html.twig' %}
         </section>
     </main>
