--- a/wp-content/themes/marchebe/templates/article/_body.html.twig
+++ b/wp-content/themes/marchebe/templates/article/_body.html.twig
@@ -1,4 +1,8 @@
-<div class="prose max-w-none prose-lg prose-slate prose-a:text-blue-600 hover:prose-a:text-blue-800">
+<div class="prose max-w-none prose-lg prose-slate prose-a:text-blue-600 hover:prose-a:text-blue-800" id="contentToListen">
+
+    {% if post.post_excerpt %}
+        <p class="fade-in-up text-shadow-slate-400">{{ post.post_excerpt }}</p>
+    {% endif %}
 
     <div class="fade-in-up text-slate-600">{{ body|raw }}</div>
 
