--- a/wp-content/themes/marchebe/templates/agenda/_event_card.html.twig
+++ b/wp-content/themes/marchebe/templates/agenda/_event_card.html.twig
@@ -8,10 +8,10 @@
                 class="w-full h-48 object-cover transition-transform duration-300 group-hover:scale-105"
         />
     </a>
-    <span
+    {#  <span
             class="text-citoyen absolute top-3 left-3 font-bold uppercase tracking-wider px-2 py-1 rounded-md">
-        {{ event.locality }}
-      </span>
+         event.locality
+      </span>#}
 
     <div class="flex flex-grow">
         <!-- Date Section -->
