--- a/wp-content/themes/marchebe/templates/agenda/_event_card.html.twig
+++ b/wp-content/themes/marchebe/templates/agenda/_event_card.html.twig
@@ -1,7 +1,7 @@
 <article
         class="group flex flex-col bg-white rounded-xl shadow-md overflow-hidden hover:shadow-2xl transition-all duration-300 ease-in-out animate-card-in"
         style="animation-delay: {{ loop.index * 100 }}ms;">
-    <a href="/tourisme/agenda-des-manifestations/manifestation/{{ event.codeCgt }}" class="block relative">
+    <a href="{{ event.url }}" class="block relative">
         <img
                 src="{% if event.images|length > 0 %} {{ event.images[0] }} {% else %} 'https://pivotmedia.tourismewallonie.be/OTH-A0-00UE-0HH1/OTH-A0-00UE-0HH1.jpg' {% endif %}"
                 alt="{{ event.nom }}"
