--- a/wp-content/themes/marchebe/templates/navigation/_mobile_menu.html.twig
+++ b/wp-content/themes/marchebe/templates/navigation/_mobile_menu.html.twig
@@ -78,7 +78,7 @@
                                     :href="child.url || `#${child.id}`"
                                     @click="toggleMobileMenu()"
                                     class="block p-3 rounded-md hover:bg-gray-700"
-                                    x-text="child.title"
+                                    x-html="child.title"
                             ></a>
                         </li>
                     </template>
