--- a/wp-content/themes/marchebe/templates/_footer.html.twig
+++ b/wp-content/themes/marchebe/templates/_footer.html.twig
@@ -62,5 +62,6 @@
             <p>&copy; 2025 Ville de Marche-en-Famenne. Tous droits réservés.</p>
         </div>
     </div>
+    {% include '@AcMarche/footer/_bottom_navigation.html.twig' %}
 </footer>
 {% include '@AcMarche/widgets/_analytics.html.twig' %}
