--- a/wp-content/themes/marchebe/templates/_footer.html.twig
+++ b/wp-content/themes/marchebe/templates/_footer.html.twig
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div class="mt-12 border-t border-gray-700 pt-6 text-center text-sm">
-            <p>&copy; 2025 Ville de Marche-en-Famenne. Tous droits réservés.</p>
+            <p>&copy; Ville de Marche-en-Famenne. Tous droits réservés.</p>
         </div>
     </div>
     {% include '@AcMarche/footer/_bottom_navigation.html.twig' %}
