--- a/wp-content/themes/marchebe/templates/footer/_bottom_navigation.html.twig
+++ b/wp-content/themes/marchebe/templates/footer/_bottom_navigation.html.twig
@@ -1,9 +1,9 @@
-<nav class="fixed bottom-0 top-auto right-0 left-0">
-    <ul class="grid grid-cols-4 items-center justify-evenly bg-cta-brown text-white"
-        id="navigationTop">
+<nav class="lg:hidden sticky bottom-0 w-full z-50">
+    <ul class="grid grid-cols-4 items-center justify-evenly bg-gray-800 text-gray-300 shadow-lg"
+        id="navigationTop" style="box-shadow: 0 -4px 6px -1px rgba(0, 0, 0, 0.1);">
         <li
                 class="btn-vivre">
-            <label for="checkboxMenu" class="icon-menu-mobile cursor-pointer">
+            <label for="checkboxMenu" class="icon-menu-mobile cursor-pointer hover:text-blue-400 transition-colors">
                 <button name="menu">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                          stroke="currentColor" class="w-6 h-6">
@@ -17,7 +17,7 @@
         <li class="">
             <a
                     href="/"
-                    class="icon-menu-mobile"
+                    class="icon-menu-mobile hover:text-blue-400 transition-colors"
             >
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                      stroke="currentColor" class="w-6 h-6">
@@ -30,7 +30,7 @@
         <li class="">
             <a
                     href="/"
-                    class="icon-menu-mobile">
+                    class="icon-menu-mobile hover:text-blue-400 transition-colors text-base">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                      stroke="currentColor"
                      class="w-6 h-6">
@@ -43,7 +43,7 @@
         <li class="">
             <a
                     href="/"
-                    class="icon-menu-mobile">
+                    class="icon-menu-mobile hover:text-blue-400 transition-colors">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                      stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round"
