--- a/wp-content/themes/marchebe/templates/_header.html.twig
+++ b/wp-content/themes/marchebe/templates/_header.html.twig
@@ -109,6 +109,6 @@
     {% include '@AcMarche/navigation/_desktop_menu.html.twig' %}
     {# Mobile Menu Panel #}
     {% include '@AcMarche/navigation/_mobile_menu.html.twig' %}
-
+    {% include '@AcMarche/footer/_bottom_navigation.html.twig' %}
 </nav>
 {% include '@AcMarche/widgets/_cookies.html.twig' %}
