--- a/wp-content/themes/marchebe/assets/css/marchebe.css
+++ b/wp-content/themes/marchebe/assets/css/marchebe.css
@@ -357,6 +357,9 @@
   .z-1000 {
     z-index: 1000;
   }
+  .z-\[60\] {
+    z-index: 60;
+  }
   .col-span-1 {
     grid-column: span 1 / span 1;
   }
@@ -1813,6 +1816,9 @@
   }
   .text-black-base {
     color: var(--color-black-base);
+  }
+  .text-blue-400 {
+    color: var(--color-blue-400);
   }
   .text-blue-600 {
     color: var(--color-blue-600);
