--- a/wp-content/themes/marchebe/templates/footer/_bottom_navigation.html.twig
+++ b/wp-content/themes/marchebe/templates/footer/_bottom_navigation.html.twig
@@ -1,18 +1,22 @@
-<nav class="lg:hidden sticky bottom-0 w-full z-50">
-    <ul class="grid grid-cols-4 items-center justify-evenly bg-gray-800 text-gray-300 shadow-lg"
-        id="navigationTop" style="box-shadow: 0 -4px 6px -1px rgba(0, 0, 0, 0.1);">
+<nav class="lg:hidden fixed bottom-0 left-0 right-0 w-full z-[60]">
+    <ul class="grid grid-cols-4 items-center justify-evenly bg-gray-800 text-gray-300"
+        id="navigationTop" style="box-shadow: 0 -4px 6px -1px rgba(0, 0, 0, 0.1), 0 -1px 3px rgba(0, 0, 0, 0.05);">
         <li
                 class="btn-vivre">
-            <label for="checkboxMenu" class="icon-menu-mobile cursor-pointer hover:text-blue-400 transition-colors">
-                <button name="menu">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                         stroke="currentColor" class="w-6 h-6">
-                        <path stroke-linecap="round" stroke-linejoin="round"
-                              d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"/>
-                    </svg>
-                </button>
+            <button
+                    @click="toggleMobileMenu()"
+                    type="button"
+                    class="icon-menu-mobile cursor-pointer hover:text-blue-400 transition-colors w-full"
+                    :class="{ 'text-blue-400': isMobileMenuOpen }"
+                    :aria-expanded="isMobileMenuOpen"
+                    aria-label="Ouvrir le menu">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                     stroke="currentColor" class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                          d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"/>
+                </svg>
                 <span class="text-menu-mobile">Menu</span>
-            </label>
+            </button>
         </li>
         <li class="">
             <a
