--- a/wp-content/themes/marchebe/templates/widgets/_cookies.html.twig
+++ b/wp-content/themes/marchebe/templates/widgets/_cookies.html.twig
@@ -1,5 +1,6 @@
 {% if hasNotAcceptCookie %}
-    <div data-show-banner="{{ cookieHasSetPreferences() }}"
+    <div class="isolate z-[70] "
+         data-show-banner="{{ cookieHasSetPreferences() }}"
          data-essential="{{ cookieIsAuthorizedByName('essential') }}"
          data-statistics="{{ cookieIsAuthorizedByName('statistics') }}"
          data-encapsulated="{{ cookieIsAuthorizedByName('encapsulated') }}"
@@ -64,7 +65,7 @@
                  x-transition:enter="transition ease-out duration-300"
                  x-transition:enter-start="opacity-0 translate-y-4"
                  x-transition:enter-end="opacity-100 translate-y-0"
-                 class="isolate z-30 fixed max-w-md p-5 mx-auto bg-white border border-gray-200 shadow-2xl left-4 md:left-12 bottom-4 md:bottom-16 rounded-2xl">
+                 class="fixed max-w-md p-5 mx-auto bg-white border border-gray-200 shadow-2xl left-4 md:left-12 bottom-4 md:bottom-16 rounded-2xl">
             <div class="flex items-start gap-3">
                 <span class="text-3xl flex-shrink-0">🍪</span>
                 <div class="flex-1">
