--- a/wp-content/themes/marchebe/templates/footer/_bottom_navigation.html.twig
+++ b/wp-content/themes/marchebe/templates/footer/_bottom_navigation.html.twig
@@ -20,7 +20,7 @@
         </li>
         <li class="">
             <a
-                    href="/"
+                    href="https://marche-auth.guichet-citoyen.be/"
                     class="icon-menu-mobile hover:text-blue-400 transition-colors"
             >
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -33,7 +33,7 @@
         </li>
         <li class="">
             <a
-                    href="/"
+                    href="/actualites/"
                     class="icon-menu-mobile hover:text-blue-400 transition-colors text-base">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                      stroke="currentColor"
@@ -46,7 +46,7 @@
         </li>
         <li class="">
             <a
-                    href="/"
+                    href="/administration/?p=277"
                     class="icon-menu-mobile hover:text-blue-400 transition-colors">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                      stroke="currentColor" class="w-6 h-6">
