--- a/wp-content/themes/marchebe/templates/navigation/_social_icons.html.twig
+++ b/wp-content/themes/marchebe/templates/navigation/_social_icons.html.twig
@@ -2,9 +2,9 @@
     <li>
         <button @click="openSearchModal()"
                 class="cursor-pointer md:inline text-gray-600 hover:text-cta-light flex items-center gap-2"
-                aria-label="Rechercher sur le site"
                 type="button">
             <i class="fas fa-search" aria-hidden="true"></i>
+            <span class="sr-only">Rechercher</span>
             <span class="hidden lg:inline text-sm font-medium">Ctrl + K</span>
         </button>
     </li>
