--- a/wp-content/themes/marchebe/assets/css/marchebe.css
+++ b/wp-content/themes/marchebe/assets/css/marchebe.css
@@ -2224,6 +2224,13 @@
       }
     }
   }
+  .hover\:bg-citoyen {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-citoyen);
+      }
+    }
+  }
   .hover\:bg-cta-dark {
     &:hover {
       @media (hover: hover) {
