--- a/wp-content/themes/marchebe/templates/homepage/_agenda.html.twig
+++ b/wp-content/themes/marchebe/templates/homepage/_agenda.html.twig
@@ -1,23 +1,25 @@
 <section>
     <h3 class="text-2xl md:text-3xl font-bold mb-6">Agenda</h3>
-    <div class="space-y-6">
+    <ul class="space-y-6">
         {% for event in events %}
-            <a
-                    href="/tourisme/agenda-des-manifestations/manifestation/{{ event.codeCgt }}"
-                    class="{% if loop.index > 3 %}hidden md:flex{% endif %} bg-white rounded-lg shadow-md overflow-hidden flex hover:shadow-lg transition-shadow"
-            >
-                <div
-                        class="bg-cta-dark text-white p-4 flex flex-col items-center justify-center w-24 text-center flex-shrink-0">
-                    <span class="text-3xl font-bold">  {{ event.shortCutDateEvent["day"] }}</span>
-                    <span class="text-sm">{{ event.shortCutDateEvent["month"] }}</span>
-                </div>
-                <div class="p-4 flex-1 overflow-hidden">
-                    <h4 class="font-semibold text-lg line-clamp-2 md:line-clamp-none">{{ event.nom }}</h4>
-                    <p class="text-sm text-gray-600"><i class="fas fa-map-marker-alt mr-1"></i> {{ event.locality }}</p>
-                </div>
-            </a>
+            <li class="{% if loop.index > 3 %}hidden md:block{% endif %}">
+                <a
+                        href="/tourisme/agenda-des-manifestations/manifestation/{{ event.codeCgt }}"
+                        class="bg-white rounded-lg shadow-md overflow-hidden flex hover:shadow-lg transition-shadow"
+                >
+                    <div
+                            class="bg-cta-dark text-white p-4 flex flex-col items-center justify-center w-24 text-center flex-shrink-0">
+                        <span class="text-3xl font-bold">  {{ event.shortCutDateEvent["day"] }}</span>
+                        <span class="text-sm">{{ event.shortCutDateEvent["month"] }}</span>
+                    </div>
+                    <div class="p-4 flex-1 overflow-hidden">
+                        <h4 class="font-semibold text-lg line-clamp-2 md:line-clamp-none">{{ event.nom }}</h4>
+                        <p class="text-sm text-gray-600"><i class="fas fa-map-marker-alt mr-1"></i> {{ event.locality }}</p>
+                    </div>
+                </a>
+            </li>
         {% endfor %}
-    </div>
+    </ul>
     <a href="/tourisme/agenda-des-manifestations/"
        class="inline-block mt-8 bg-cta-dark text-white font-semibold py-2 px-5 rounded-lg hover:bg-cta-light transition-colors">
         Tout l'agenda
