--- a/wp-content/themes/marchebe/templates/homepage/_partners.html.twig
+++ b/wp-content/themes/marchebe/templates/homepage/_partners.html.twig
@@ -13,18 +13,20 @@
 
         <!-- Logo Grid -->
         <!-- `justify-center` is key here to keep the logos looking neat when they wrap on smaller screens -->
-        <div class="mt-12 flex flex-wrap items-center justify-center gap-x-10 gap-y-8 md:gap-x-16">
+        <ul class="mt-12 flex flex-wrap items-center justify-center gap-x-10 gap-y-8 md:gap-x-16">
             {% for item in partners %}
-                <a
-                        href="{{ item.url }}"
-                        target="_blank" rel="noopener noreferrer" class="group">
-                    <img
-                            class="h-12 md:h-24 w-auto object-contain opacity-70 grayscale transition-all duration-300 group-hover:opacity-100 group-hover:grayscale-0 group-hover:scale-105"
-                            src="{{ template_directory }}/assets{{ item.img }}"
-                            alt="{{ item.alt }}"/>
-                </a>
+                <li>
+                    <a
+                            href="{{ item.url }}"
+                            target="_blank" rel="noopener noreferrer" class="group">
+                        <img
+                                class="h-12 md:h-24 w-auto object-contain opacity-70 grayscale transition-all duration-300 group-hover:opacity-100 group-hover:grayscale-0 group-hover:scale-105"
+                                src="{{ template_directory }}/assets{{ item.img }}"
+                                alt="{{ item.alt }}"/>
+                    </a>
+                </li>
             {% endfor %}
 
-        </div>
+        </ul>
     </div>
 </section>
