--- a/wp-content/themes/marchebe/templates/_header.html.twig
+++ b/wp-content/themes/marchebe/templates/_header.html.twig
@@ -1,5 +1,6 @@
 <!-- Main Header -->
-<nav @click.window="closeOnClickOutside($event)"
+<nav class="fixed top-0 left-0 w-full z-50"
+        @click.window="closeOnClickOutside($event)"
      x-data="{
     // State Management
     isMobileMenuOpen: false,
