--- a/wp-content/themes/marchebe/assets/css/marchebe.css
+++ b/wp-content/themes/marchebe/assets/css/marchebe.css
@@ -3055,6 +3055,14 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+body.admin-bar nav.fixed {
+  top: 32px;
+}
+@media screen and (max-width: 782px) {
+  body.admin-bar nav.fixed {
+    top: 46px;
+  }
+}
 #homepage a, #main-header a, #desktop-menu a, #mobile-menu a, #shortcuts a, #widgets a, #category-filter-menu a {
   text-decoration: none;
 }
